-feat (Educator,EducatorDTO, Distribution) Создть поле флаг компактности распределения занятий преподавателю, настроить распределение практик в DistributionDiscipline